# MiniSuper-Case

./: .gitignore  INSTRUCCIONES_TECNICAS.md  PROGRESO.md  README.md  diagrama_er_pos_minimarket.drawio
assets/diagramas/: Diagrama Entidad Relacion Mejorado (EER).drawio
backend/: .env.example  README.md  aplicacion.py  app_simple.py  main.py  pyproject.toml  requirements.txt  test_db.py
backend/app/application/: exceptions.py
backend/app/application/dto/: producto_dto.py  venta_dto.py
backend/app/application/services/: producto_service.py  venta_service.py
backend/app/domain/: models.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/database/: connection.py
backend/app/presentation/routes/: api.py
backend/sql/: minisuper_bd.sql  schema.sql  seed_30_datos.sql
