[project]
name = "minisuper-api"
version = "0.1.0"
description = "API REST para sistema de ventas MiniSuper"
authors = [{name = "MiniSuper Team", email = "team@minisuper.local"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Cors==4.0.0",
    "python-dotenv==1.0.0",
    "bcrypt==4.1.2",
    "marshmallow==3.20.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]


